// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`YAML in/out schema1.yaml + schema2.yaml -> yaml 1`] = `
"models:
  common:
    includeOnly: true
    fields:
      id:
        type: uuid
        primaryKey: true
      notes:
        type: string
        long: true
  user:
    description: A user of the platform
    includes:
      common: true
    fields:
      name:
        description: Name of the user
        type: string
        validations:
          required: true
          unique: true
      surname:
        type: string
      aBoolean:
        type: boolean
        validations:
          required: true
        defaultValue: false
  project:
    includes:
      common: true
    fields:
      name:
        type: string
      startDate:
        type: date
        time: false
      endDate:
        type: date
        time: false
    relations:
      projectManager:
        model: user
        validations:
          required: true
      technicalManager:
        model: user
        inverse: null
      creator:
        model: user
        inverse:
          name: createdProjects
"
`;

exports[`YAML in/out schema1.yaml -> yaml 1`] = `
"models:
  common:
    includeOnly: true
    fields:
      id:
        type: uuid
        primaryKey: true
      notes:
        type: string
        long: true
  user:
    description: A user of the platform
    includes:
      common: true
    fields:
      name:
        description: Name of the user
        type: string
        validations:
          required: true
          unique: true
      surname:
        type: string
      aBoolean:
        type: boolean
        validations:
          required: true
        defaultValue: false
  project:
    includes:
      common: true
    fields:
      name:
        type: string
    relations:
      projectManager:
        model: user
        validations:
          required: true
      technicalManager:
        model: user
        inverse: null
"
`;
